--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,59 +1,88 @@
+# .github/workflows/ci.yml
 name: Foundation CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
   security-events: write
 
+env:
+  # Добавьте сюда, если потребуется, глобальные переменные (например, для Unit-тестов)
+  # ZILANT_LOG_KEY может быть получен в пуле jobs/vault-secrets.yml
+  # COSIGN_PASSWORD может быть получен в пуле jobs/vault-secrets.yml
+
 jobs:
   lint-format:
-    name: Lint & Format (${{ matrix.python }})
+    name: Lint & Format (py${{ matrix.python }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.11", "3.12", "3.13"]
+        python: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install dev-deps
-        run: pip install -e .[dev]
-      - run: ruff check src tests
-      - run: black --check src tests
-      - run: isort --check-only src tests
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  tests:
-    name: Tests & Coverage (${{ matrix.python }})
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: "${{ matrix.python }}"
+
+      - name: Install dependencies for linting
+        run: |
+          pip install --upgrade pip
+          pip install ruff black isort mypy
+
+      - name: Run ruff (lint)
+        run: |
+          ruff check src tests
+
+      - name: Run black check
+        run: |
+          black --check src tests
+
+      - name: Run isort check
+        run: |
+          isort --check-only --diff src tests
+
+      - name: Run mypy (type checking)
+        run: |
+          mypy src
+
+  test-and-coverage:
+    name: Run pytest & Coverage (py${{ matrix.python }})
     runs-on: ubuntu-latest
     needs: lint-format
     strategy:
       matrix:
-        python: ["3.13"]
+        python: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python }}
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Install test-deps
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: "${{ matrix.python }}"
+
+      - name: Install project + test dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -e .[dev]
           pip install pytest-cov hypothesis
 
       - name: Run pytest with coverage
-        run: pytest -q --cov=src/zilant_prime_core --cov-report=xml
+        run: |
+          pytest -q --cov=src/zilant_prime_core --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           files: coverage.xml
-          # не будем падать, если вдруг Coverage.xml пустой
           fail_ci_if_empty: false
