--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,35 +1,37 @@
 # .github/workflows/release.yml
-name: Publish
+name: Release Python Package
 
 on:
-  push:
-    tags:
-      - 'v*'      # любые теги вида v1.2.3
+  release:
+    types: [published]
 
 permissions:
-  contents: read   # для actions/checkout
-  packages: write  # для pypa/gh-action-pypi-publish
+  contents: read
+  packages: write
+  id-token: write
 
 jobs:
   build-publish:
+    name: Build and Publish to PyPI
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
         with:
-          persist-credentials: false
+          python-version: "3.x"
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
 
-      - name: Install build tools
-        run: python -m pip install --upgrade pip build
-
-      - name: Build distributions
-        run: python -m build
+      - name: Build distribution
+        run: |
+          python -m build --sdist --wheel
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -37,3 +39,14 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
           skip-existing: true
+
+      - name: (Опционально) Sign Artifacts with Cosign
+        if: github.event_name == 'release' && github.event.action == 'published'
+        run: |
+          # Предполагается, что cosign.key и COSIGN_PASSWORD на месте
+          COSIGN_VERSION="v2.0.1"
+          curl -LsS "https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-linux-amd64" \
+            -o cosign && chmod +x cosign && sudo mv cosign /usr/local/bin/cosign
+          for artifact in dist/*; do
+            cosign sign --key cosign.key --password-env COSIGN_PASSWORD "$artifact"
+          done
