--- a/.github/workflows/vault-secrets.yml
+++ b/.github/workflows/vault-secrets.yml
@@ -1,40 +1,53 @@
-name: Vault Secret Injection
+# .github/workflows/vault-secrets.yml
+name: Fetch Secrets from Vault & AWS
+
 on:
-  workflow_dispatch:
+  workflow_call: {}  # Делаем его reusable workflow, чтобы можно было подключать в других workflows
+
 permissions:
+  # Права нужны для обращения к содержимому и security-events (например, для экспорта variables)
   contents: read
 
 jobs:
-  fetch-and-test:
-    if: ${{ secrets.VAULT_URL }}
+  fetch-secrets:
+    name: Fetch secrets from Vault and AWS
     runs-on: ubuntu-latest
+    outputs:
+      ZILANT_LOG_KEY: ${{ steps.get-log-key.outputs.ZIL_KEY }}
+      COSIGN_PASSWORD: ${{ steps.get-cosign-pwd.outputs.COSIGN_PWD }}
+
     steps:
-      - uses: actions/checkout@v4
-      - id: vault-auth
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # ──────── 1) HashiCorp Vault ────────
+      - name: Login to HashiCorp Vault
         uses: hashicorp/vault-action@v2
         with:
-          url:   ${{ secrets.VAULT_URL }}
+          url: ${{ secrets.VAULT_ADDR }}
+          method: token
           token: ${{ secrets.VAULT_TOKEN }}
-  
-          # method: approle / github / oidc — как у вас настроено
-          # role:   ${{ secrets.VAULT_ROLE }}
 
-      # 2) Забираем секреты
-      - name: Fetch application secrets
-        id: secrets
-        uses: hashicorp/vault-action@v2
-        with:
-          url:      ${{ secrets.VAULT_URL }}
-          token:    ${{ steps.vault-auth.outputs.token }}
-          secrets:  |
-            secret/data/zilant #path username | VAULT_USER ;
-            secret/data/zilant #path password | VAULT_PASS ;
-
-      # 3) Прогоняем тесты/линтер с инжект‑секретами
-      - name: Run tests with Vault secrets
-        env:
-          VAULT_USER: ${{ steps.secrets.outputs.VAULT_USER }}
-          VAULT_PASS: ${{ steps.secrets.outputs.VAULT_PASS }}
+      - name: Read ZILANT_LOG_KEY from Vault
+        id: get-log-key
         run: |
-          echo "Secrets OK (user=$VAULT_USER)"
-          # pytest или любой другой шаг
+          # kv v2: secret/data/zilant → поле ZILANT_LOG_KEY
+          ZIL_KEY=$(vault kv get -field=ZILANT_LOG_KEY secret/data/zilant)
+          echo "::set-output name=ZIL_KEY::$ZIL_KEY"
+
+      # ──────── 2) AWS Secrets Manager ────────
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Get COSIGN_PASSWORD from AWS Secrets Manager
+        id: get-cosign-pwd
+        run: |
+          # Предполагается, что в AWS SM есть секрет с именем "zilant/cosign_password"
+          COSIGN_PWD=$(aws secretsmanager get-secret-value \
+            --secret-id zilant/cosign_password \
+            --query SecretString --output text)
+          echo "::set-output name=COSIGN_PWD::$COSIGN_PWD"
