--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        # → Убрали 3.9, теперь только 3.10–3.13
+        python: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout repository
@@ -55,7 +56,8 @@ jobs:
     needs: lint-format
     strategy:
       matrix:
-        python: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        # → Только 3.10–3.13, как и в lint-format
+        python: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout repository
