--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # → Убрали 3.9, теперь только 3.10–3.13
+        # Убрали 3.9, теперь только 3.10–3.13
         python: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
@@ -56,7 +56,7 @@ jobs:
     needs: lint-format
     strategy:
       matrix:
-        # → Только 3.10–3.13, как и в lint-format
+        # → Только 3.10–3.13
         python: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
