--- a/.github/workflows/trivy-critical-scan.yml
+++ b/.github/workflows/trivy-critical-scan.yml
@@ -22,7 +22,8 @@ jobs:
 
       # ─────────────── Install Trivy ───────────────
       - name: Install Trivy via GitHub Action
-        uses: aquasecurity/trivy-action@v0.34.1
+        # ← здесь тоже заменили @v0.34.1 → @v0.30.0
+        uses: aquasecurity/trivy-action@v0.30.0
 
       # ──────────── Генерация SBOM (если её ещё нет) ────────────
       - name: Install Syft v0.80.0
@@ -39,11 +40,11 @@ jobs:
         run: |
           trivy sbom.json --severity HIGH,CRITICAL
 
-      # Альтернатива: сканировать Docker-образ (раскомментировать, если нужно)
+      # Альтернатива: сканировать Docker-образ
       # - name: Build Docker image
       #   run: |
       #     docker build -t zilant-prime-app:latest .
       #
-      # - name: Run Trivy scan against Docker image
+      # - name: Run Trivy image scan
       #   run: |
       #     trivy image --severity HIGH,CRITICAL zilant-prime-app:latest
