--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # ───────────────────────── build system ─────────────────────────
 [build-system]
-requires = ["setuptools>=68", "wheel"]   # >=68 нужен для PEP 621
+requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 # ─────────────────────────── project ────────────────────────────
@@ -45,7 +45,7 @@ Documentation   = "https://github.com/yourorg/zilant-prime-core#readme"
 
 # ───────────────────────── tool: Black ──────────────────────────
 [tool.black]
-# → Убрали py39, теперь только 3.10–3.13
+# → Убрали py39, оставили только py310–py313
 target-version = ["py310", "py311", "py312", "py313"]
 line-length = 120
 include = '\.pyi?$'
@@ -90,7 +90,6 @@ max-complexity = 12
 
 # ───────────────────────── tool: MyPy ──────────────────────────
 [tool.mypy]
-# Ставим совпадающую версию (последняя в матрице CI)
 python_version           = "3.13"
 check_untyped_defs       = true
 disallow_untyped_defs    = true
