fix(ci): использовать trivy-action@main, убрать Python 3.9, требует Python >=3.10

--- a/.github/workflows/trivy-critical-scan.yml
+++ b/.github/workflows/trivy-critical-scan.yml
@@ -22,8 +22,7 @@ jobs:
 
       # ─────────────── Install Trivy ───────────────
       - name: Install Trivy via GitHub Action
-        # ← здесь тоже заменили @v0.34.1 → @v0.30.0
-        uses: aquasecurity/trivy-action@v0.30.0
+        uses: aquasecurity/trivy-action@main
 
       # ──────────── Генерация SBOM (если её ещё нет) ────────────
       - name: Install Syft v0.80.0
