fix(ci): обновить trivy-action (использовать @master или корректный тег), убрать Python 3.9

--- a/.github/workflows/trivy-critical-scan.yml
+++ b/.github/workflows/trivy-critical-scan.yml
@@ -22,7 +22,8 @@ jobs:
 
       # ─────────────── Install Trivy ───────────────
       - name: Install Trivy via GitHub Action
-        uses: aquasecurity/trivy-action@main
+        # ↓ тоже @master
+        uses: aquasecurity/trivy-action@master
 
       # ──────────── Генерация SBOM (если её ещё нет) ────────────
       - name: Install Syft v0.80.0
