--- a/.github/workflows/trivy-critical-scan.yml
+++ b/.github/workflows/trivy-critical-scan.yml
@@ -17,36 +17,52 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Чекаутим репозиторий
+      # ─────────────────────────────────────────────────────────────────────────────
+      # 1) Checkout repository
+      # ─────────────────────────────────────────────────────────────────────────────
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2) Устанавливаем Trivy через официальный Action
+      # ─────────────────────────────────────────────────────────────────────────────
+      # 2) Install Trivy via aquasecurity/trivy-action@master
+      # ─────────────────────────────────────────────────────────────────────────────
       - name: Install Trivy
         uses: aquasecurity/trivy-action@master
 
-      # 3) Генерируем SBOM (CycloneDX-JSON) с помощью Trivy
-      - name: Generate SBOM (CycloneDX-JSON)
+      # ─────────────────────────────────────────────────────────────────────────────
+      # 3) Generate SBOM in CycloneDX-JSON (sbom.json)
+      # ─────────────────────────────────────────────────────────────────────────────
+      - name: Generate SBOM (CycloneDX)
         run: |
           trivy sbom --format cyclonedx --output sbom.json .
 
-      # 4) Сканируем SBOM на уязвимости HIGH/CRITICAL
+      # ─────────────────────────────────────────────────────────────────────────────
+      # 4) Scan SBOM for HIGH/CRITICAL vulnerabilities
+      # ─────────────────────────────────────────────────────────────────────────────
       - name: Scan SBOM for HIGH/CRITICAL vulnerabilities
         run: |
           trivy sbom --format table --scanners vuln --severity HIGH,CRITICAL sbom.json
 
-      # 5) Загрузим sbom.json как артефакт
+      # ─────────────────────────────────────────────────────────────────────────────
+      # 5) Upload sbom.json as artifact
+      # ─────────────────────────────────────────────────────────────────────────────
       - name: Upload SBOM file
         uses: actions/upload-artifact@v3
         with:
           name: sbom-json
           path: sbom.json
 
-      # 6) Сохраняем JSON-отчёт Trivy (опционально) и тоже загружаем
+      # ─────────────────────────────────────────────────────────────────────────────
+      # 6) Generate JSON report (опционально) and upload it
+      # ─────────────────────────────────────────────────────────────────────────────
       - name: Generate Trivy JSON report
         if: always()
         run: |
-          trivy sbom --format json --scanners vuln --severity HIGH,CRITICAL sbom.json > trivy-report.json
+          trivy sbom \
+            --format json \
+            --scanners vuln \
+            --severity HIGH,CRITICAL \
+            sbom.json > trivy-report.json
 
       - name: Upload Trivy JSON report
         if: always()
