fix(ci): полный trivy sbom (CycloneDX-JSON) + upload-artifact@v3

--- a/.github/workflows/trivy-critical-scan.yml
+++ b/.github/workflows/trivy-critical-scan.yml
@@ -17,44 +17,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 1) Checkout repository
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 1. Checkout репозитория
+      # ─────────────────────────────────────────────────────────────────────
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 2) Install Trivy via aquasecurity/trivy-action@master
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 2. Install Trivy
+      # ─────────────────────────────────────────────────────────────────────
       - name: Install Trivy
         uses: aquasecurity/trivy-action@master
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 3) Generate SBOM in CycloneDX-JSON (sbom.json)
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 3. Generate SBOM (CycloneDX-JSON)
+      # ─────────────────────────────────────────────────────────────────────
       - name: Generate SBOM (CycloneDX)
         run: |
+          # Генерируем sbom.json
           trivy sbom --format cyclonedx --output sbom.json .
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 4) Scan SBOM for HIGH/CRITICAL vulnerabilities
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 4. Scan SBOM for HIGH/CRITICAL vulnerabilities
+      # ─────────────────────────────────────────────────────────────────────
       - name: Scan SBOM for HIGH/CRITICAL vulnerabilities
         run: |
           trivy sbom --format table --scanners vuln --severity HIGH,CRITICAL sbom.json
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 5) Upload sbom.json as artifact
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 5. Upload sbom.json как артефакт
+      # ─────────────────────────────────────────────────────────────────────
       - name: Upload SBOM file
         uses: actions/upload-artifact@v3
         with:
           name: sbom-json
           path: sbom.json
 
-      # ─────────────────────────────────────────────────────────────────────────────
-      # 6) Generate JSON report (опционально) and upload it
-      # ─────────────────────────────────────────────────────────────────────────────
+      # ─────────────────────────────────────────────────────────────────────
+      # Шаг 6. Generate Trivy JSON report (optional) и upload
+      # ─────────────────────────────────────────────────────────────────────
       - name: Generate Trivy JSON report
         if: always()
         run: |
