--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,83 +1,59 @@
 # .github/workflows/ci.yml
-name: Foundation CI
+name: CI
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
   pull_request:
-    branches: ["main"]
-
-permissions:
-  contents: read
-  security-events: write
+    branches: [main]
 
 jobs:
   lint-format:
-    name: Lint & Format (py${{ matrix.python }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.10", "3.11", "3.12", "3.13"]
-
+        python-version: [3.10, 3.11, 3.12, 3.13]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: "${{ matrix.python }}"
-
-      - name: Install dependencies for linting
+          python-version: ${{ matrix.python-version }}
+      - name: Install tooling
         run: |
-          python -m pip install --upgrade pip
-          pip install ruff black isort mypy
+          pip install ruff black isort
+      - name: Black (check-only)
+        run: black --check .
+      - name: Ruff
+        run: ruff check .
+      - name: isort (check-only)
+        run: isort --check-only .
 
-      - name: Run ruff (lint)
-        run: |
-          ruff check src tests
-
-      - name: Run black check
-        run: |
-          black --check src tests
-
-      - name: Run isort check
-        run: |
-          isort --check-only --diff src tests
-
-      - name: Run mypy (type checking)
-        run: |
-          mypy src
-
-  test-and-coverage:
-    name: Run pytest & Coverage (py${{ matrix.python }})
+  pytest-coverage:
     runs-on: ubuntu-latest
-    needs: lint-format
     strategy:
       matrix:
-        python: ["3.10", "3.11", "3.12", "3.13"]
-
+        python-version: [3.10, 3.11, 3.12, 3.13]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: "${{ matrix.python }}"
-
-      - name: Install project + test dependencies
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -e .[dev]
-          pip install pytest-cov hypothesis
-
+          pip install -r requirements-dev.txt
       - name: Run pytest with coverage
         run: |
-          pytest -q --cov=src/zilant_prime_core --cov-report=xml
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+          pytest --cov=src --cov-report=xml --cov-report=html
+      - name: Upload coverage XML
+        uses: actions/upload-artifact@v4
         with:
-          files: coverage.xml
-          fail_ci_if_empty: false
+          name: coverage-xml-${{ matrix.python-version }}
+          path: coverage.xml
+      - name: Upload coverage HTML (optional)
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-html-${{ matrix.python-version }}
+          path: htmlcov/
+
