--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,19 +8,14 @@ on:
 
 jobs:
   lint-format:
-    name: "Lint & Format"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff black isort
+          python-version: '3.11'
+      - name: Install tooling
+        run: pip install black ruff isort
       - name: Black (check-only)
         run: black --check .
       - name: Ruff (check-only)
@@ -29,14 +24,12 @@ jobs:
         run: isort --check-only .
 
   pytest-coverage:
-    name: "Pytest & Coverage"
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.10, 3.11, 3.12, 3.13]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -46,8 +39,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
       - name: Run pytest with coverage
-        run: |
-          pytest --cov=src --cov-report=xml --cov-report=html
+        run: pytest --cov=src --cov-report=xml --cov-report=html
       - name: Upload coverage XML
         uses: actions/upload-artifact@v4
         with:
